--- a/sources/problem/YX0001.md
+++ b/sources/problem/YX0001.md
@@ -6,10 +6,10 @@
 
 群星闪耀，天上熠熠生辉。五颗星星如众星首领，盎然绽放光彩于世间。穿越时空，照亮五片大陆、五个次元，守护一片安宁与和谐。
 $$
-\textcolor{purple}{-五星陨世，-}\\
-\textcolor{orange}{-是星之者对世界的救赎，还是……-}\\
-\textcolor{blue}{-携带千万年亿万年厄运与仇怨，-}\\
-\textcolor{red}{-毁灭这一方世间……-}\\
+\textcolor{purple}{-五星陨世，-}\newline
+\textcolor{orange}{-是星之者对世界的救赎，还是……-}\newline
+\textcolor{blue}{-携带千万年亿万年厄运与仇怨，-}\newline
+\textcolor{red}{-毁灭这一方世间……-}\newline
 \textcolor{black}{-或是，命运与轮回本既如此。-}
 $$
 
@@ -156,4 +156,5 @@ $$
 | :----------: | :----------: | :----------: | :----------: | :----------: | :----------: |
 | $0$ | $24$ |$50$ | $100$ | $\min(n \times m, 800)$ | 无 |
 | $1$ | $56$ |$100$ | $1000$ | $\min(n \times m, 2 \times 10^3)$ | 无 |
+
 | $2$ | $20$ |$10^3$ | $10^6$ | $\min(n \times m, 10^4)$ | 无 |
