--- a/sources/problem/YX0001.md
+++ b/sources/problem/YX0001.md
@@ -1,4 +1,4 @@
-# U612494 是厄运，还是救赎【陨星】
+# YX0001 是厄运，还是救赎【陨星】
 
 ## 题目背景
 
@@ -156,5 +156,5 @@ $$
 | :----------: | :----------: | :----------: | :----------: | :----------: | :----------: |
 | $0$ | $24$ |$50$ | $100$ | $\min(n \times m, 800)$ | 无 |
 | $1$ | $56$ |$100$ | $1000$ | $\min(n \times m, 2 \times 10^3)$ | 无 |
-
 | $2$ | $20$ |$10^3$ | $10^6$ | $\min(n \times m, 10^4)$ | 无 |
+
